{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 215,
  "lineage": "13a3776c-8212-a9f2-4409-39a3deb0f97a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "CowrieTFWIP",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02df9ea15c1778c9c",
            "arn": "arn:aws:ec2:eu-west-1:228434638586:instance/i-0b17bd12feb7ae1f6",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0b17bd12feb7ae1f6",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "HP-default",
            "monitoring": false,
            "primary_network_interface_id": "eni-01b50cd5fafdab226",
            "private_dns": "ip-172-31-31-213.eu-west-1.compute.internal",
            "private_ip": "172.31.31.213",
            "public_dns": "ec2-52-50-95-239.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.50.95.239",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03a54626f2f6ded22",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "Allow BECL46 Admin",
              "Cowrie Honeypot Ports"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-37a7ff7f",
            "tags": {
              "Name": "CowrieViaTF"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0875fc019b6cabc27",
              "sg-0ed7bf07ffdb66f9a"
            ]
          },
          "depends_on": [
            "aws_security_group.allow_becl46",
            "aws_security_group.cowrie_honeypot_exposed",
            "data.template_file.cowrie_user_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_becl46",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:228434638586:security-group/sg-0875fc019b6cabc27",
            "description": "Allow Admin",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0875fc019b6cabc27",
            "ingress": [
              {
                "cidr_blocks": [
                  "90.203.143.90/32"
                ],
                "description": "",
                "from_port": 22222,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22222
              }
            ],
            "name": "Allow BECL46 Admin",
            "name_prefix": null,
            "owner_id": "228434638586",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-79ddc21f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cowrie_honeypot_exposed",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:228434638586:security-group/sg-0ed7bf07ffdb66f9a",
            "description": "Public access to Cowrie honeypot port(s)",
            "egress": [],
            "id": "sg-0ed7bf07ffdb66f9a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Cowrie Honeypot Ports",
            "name_prefix": null,
            "owner_id": "228434638586",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-79ddc21f"
          }
        }
      ]
    }
  ]
}